syntax = "proto3";

package myservice.v1;

service MyService {
  // Unary RPC
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message User {
  string user_id = 1;
  string name = 2;
}

message GetUserRequest {
  string user_id = 1;
}
message GetUserResponse {
  User user = 1;
}
